BUG: get the jar and .tcl files installed when using cpack, if out the SPECTRE stuff for now
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13260 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Java/CMakeLists.txt
+++ b/Applications/CLI/Java/CMakeLists.txt
@@ -6,6 +6,7 @@ FIND_PACKAGE ( Java )
 
 
 slicer3_set_plugins_output_path()
+
 set(build_type ".")
 if(WIN32 AND CMAKE_CONFIGURATION_TYPES)
   # Sadly, there is no way to know if the user picked Debug or Release
@@ -47,45 +48,50 @@ IF ( JAVA_COMPILE )
 
   ADD_DEPENDENCIES ( ${CLP}.jar ${CLP}.jar.classes )
 
-ELSE ( JAVA_COMPILE)
-   message (STATUS "Unable to compile java code, trying to install a prebuilt jar file: ${CMAKE_CURRENT_SOURCE_DIR}/${CLP}.jar")
-   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/${CLP}.jar
-                    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}/${CLP}.jar
-                   COPYONLY
-    )
-   install (
-     FILES ${CMAKE_CURRENT_SOURCE_DIR}/${CLP}.jar
-     DESTINATION  ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}
+  # install the jar file
+  install (
+     FILES ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}/${CLP}.jar
+     DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
      )
+
+  #####
+  # install the tcl file that runs the jar file like an executable CLI
+  #####
+ 
+  if (Slicer3_SOURCE_DIR)
+    # install each target in the production area (where it would appear in an 
+    # installation) and install each target in the developer area (for running 
+    # from a build)
+#    message (STATUS "Installing ${CLP}.tcl")
+    set(TARGETS 
+      ${CLP}.tcl
+     )
+
+  foreach(file ${TARGETS})
+    configure_file(
+      ${CMAKE_CURRENT_SOURCE_DIR}/${file}
+      ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}/${file}
+      COPYONLY
+      )
+  endforeach(file)
+#  install(
+#    FILES ${TARGETS}
+#    DESTINATION ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}
+#   )
+  install (
+     FILES ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}/${CLP}.tcl
+     DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+     )
+  endif (Slicer3_SOURCE_DIR)
+
+ELSE ( JAVA_COMPILE)
+   message (STATUS "Unable to compile java code, skipping installation of ${CLP}.jar and .tcl")
 ENDIF ( JAVA_COMPILE )
 
-#####
-# install the tcl file that runs the jar file like an executable CLI
-#####
-
-if (Slicer3_SOURCE_DIR)
-  # install each target in the production area (where it would appear in an 
-  # installation) and install each target in the developer area (for running 
-  # from a build)
-  set(TARGETS 
-     ${CLP}.tcl
-    )
-
-foreach(file ${TARGETS})
-  configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/${file}
-    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}/${file}
-    COPYONLY
-    )
-endforeach(file)
-install(
-  FILES ${TARGETS}
-  DESTINATION ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}/${build_type}
-  )
-endif (Slicer3_SOURCE_DIR)
-
-
 ##############
+
+# skip SPECTRE
+if (0)
 
 set (CLP SPECTRE)
 
@@ -99,6 +105,7 @@ if (Slicer3_SOURCE_DIR)
   # from a build)
   set(TARGETS 
      ${CLP}.tcl
+     SPECTRE_2010-04-01.jar
     )
 
 foreach(file ${TARGETS})
@@ -115,3 +122,4 @@ install(
 endif (Slicer3_SOURCE_DIR)
 
 
+endif (0)
