BUG: enable window paths for BRAINSTools to work with slicer build system; fixes testing on window
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13263 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSDemonWarp/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSDemonWarp/TestSuite/CMakeLists.txt
@@ -20,7 +20,7 @@ set(BRAINS_Demon_Warp_TESTS ${BRAINSDemonWarp_BINARY_DIR}/BRAINSDemonWarpCLPTest
 add_executable( VBRAINSDemonWarpCLPTests VBRAINSDemonWarpCLPTests.cxx ${BRAINSDemonWarp_SOURCE_DIR}/VBRAINSDemonWarpPrimary.cxx)
 target_link_libraries(VBRAINSDemonWarpCLPTests BRAINSDemonWarpCommonLib ${BRAINSWARP_ITK_LIBS} ${OPTIONAL_DEBUG_LINK_LIBRARIES})
 set_target_properties(VBRAINSDemonWarpCLPTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BRAINSDemonWarp_BINARY_DIR})
-set(VBRAINS_Demon_Warp_TESTS ${BRAINSDemonWarp_BINARY_DIR}/VBRAINSDemonWarpCLPTests )
+set(VBRAINS_Demon_Warp_TESTS ${LAUNCH_EXE} ${BRAINSDemonWarp_BINARY_DIR}/${CMAKE_BUILD_TYPE}/VBRAINSDemonWarpCLPTests )
 
 #1
 add_test(ValidateThirionDemonsTest_nii ${BRAINS_Demon_Warp_TESTS}
