--- a/Applications/CLI/BRAINSTools/BRAINSROIAuto/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSROIAuto/TestSuite/CMakeLists.txt
@@ -12,15 +12,15 @@ add_executable(BRATestCompare BRATestCompare.cxx)
 target_link_libraries(BRATestCompare ${ITK_LIBRARIES})
 set_target_properties(BRATestCompare PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BRAINSROIAuto_BINARY_DIR})
 
-add_test(BRATestImage ${BRAINSROIAuto_BINARY_DIR}/BRATestImage ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz)
+add_test(BRATestImage ${LAUNCH_EXE} ${BRAINSROIAuto_BINARY_DIR}/${CMAKE_BUILD_TYPE}/BRATestImage ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz)
 
-add_test(RunBRAINSROIAuto ${TESTING_BINARY_DIR}/BRAINSROIAuto
+add_test(RunBRAINSROIAuto ${LAUNCH_EXE} ${TESTING_BINARY_DIR}/${CMAKE_BUILD_TYPE}/BRAINSROIAuto
   --inputVolume ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz
   --outputClippedVolumeROI ${BRAINSROIAuto_BINARY_DIR}/clippedSphere.nii.gz
   --outputROIMaskVolume ${BRAINSROIAuto_BINARY_DIR}/maskSphere.nii.gz)
 set_tests_properties ( RunBRAINSROIAuto PROPERTIES DEPENDS BRATestImage)
 
-add_test(CompareMasks ${BRAINSROIAuto_BINARY_DIR}/BRATestCompare
+add_test(CompareMasks ${LAUNCH_EXE} ${BRAINSROIAuto_BINARY_DIR}/${CMAKE_BUILD_TYPE}/BRATestCompare
   ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz
   ${BRAINSROIAuto_BINARY_DIR}/maskSphere.nii.gz)
 set_tests_properties ( CompareMasks PROPERTIES DEPENDS RunBRAINSROIAuto)
