--- a/Applications/CLI/BRAINSTools/BRAINSResample/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSResample/TestSuite/CMakeLists.txt
@@ -3,6 +3,9 @@
 ###  physical space descriptions to ensure that all ITK
 ###  images are treated properly.
 
+if (WIN32)
+  set(BUILD_SUBDIR ${CMAKE_BUILD_TYPE}/)
+endif (WIN32)
 
 ### All test have been pushed to this sub-directory to keep the primary build clean.
 
@@ -11,7 +14,7 @@ target_link_libraries(BRAINSResampleTest BRAINSCommonLib ITKAlgorithms ITKIO)
 set_target_properties(BRAINSResampleTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_dependencies(BRAINSResampleTest BRAINSResample)
 
-set(BRAINSResample_TESTS ${LAUNCH_EXE} ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/BRAINSResampleTest )
+set(BRAINSResample_TESTS ${LAUNCH_EXE} ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_SUBDIR}BRAINSResampleTest )
 
 
 add_test(ValidateBRAINSResampleTest4_nii ${BRAINSResample_TESTS}
