BUG: do not compile miAnnotation at this time
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13275 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -21,7 +21,7 @@ SET(qtmodules
   Volumes
   Measurements
   TractographyFiducialSeeding
-  miAnnotation
+  # miAnnotation
   )
 
 FOREACH(module ${qtmodules})
