ENH: force RPATH on for Mac Builds.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13286 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -862,6 +862,7 @@ if(APPLE)
     -DVTK_USE_CARBON:BOOL=OFF
     -DVTK_USE_COCOA:BOOL=OFF
     -DVTK_USE_X:BOOL=ON
+    -DVTK_USE_RPATH:BOOL=ON
   )
 endif()
 
