COMP: CTK was missing VTK dependency in SuperBuild
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13322 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -938,6 +938,8 @@ if (Slicer3_USE_QT)
       -DCTK_LIB_Visualization/VTK/Widgets:BOOL=ON
       -DCTK_LIB_Scripting/Python/Widgets:BOOL=${Slicer3_USE_PYTHONQT}
     INSTALL_COMMAND ""
+    DEPENDS 
+      vtk
     )
 endif()
 
