BUG: Exclude miAnnotation if QT support is enabled without KWWidgets
Since the module relies on functionality which have not been ported
to QT, this was expected.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13334 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -21,8 +21,12 @@ SET(qtmodules
   Volumes
   Measurements
   TractographyFiducialSeeding
-  # miAnnotation
   )
+
+# NOTE miAnnotation depends on KWWidget and Qt
+IF(Slicer3_USE_KWWIDGETS)
+  LIST(APPEND qtmodules miAnnotation)
+ENDIF()
 
 FOREACH(module ${qtmodules})
   ADD_SUBDIRECTORY(${module})
