--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -191,18 +191,22 @@ option(Slicer3_USE_VTK_DEBUG_LEAKS
 
 set(tk_DEPENDENCIES tcl)
 set(incrTcl_DEPENDENCIES tcl tk)
-set(iwidgets_DEPENDENCIES tcl tk)
+set(iwidgets_DEPENDENCIES tcl itcl)
 set(blt_DEPENDENCIES tcl tk)
-set(python_DEPENDENCIES tcl tk)
+set(python_DEPENDENCIES tcl)
 set(PythonQt_DEPENDENCIES python)
 set(blas_DEPENDENCIES)
 set(lapack_DEPENDENCIES)
+set(numpy_DEPENDENCIES blas lapack python)
+set(scipy_DEPENDENCIES numpy)
 set(vtk_DEPENDENCIES)
+set(CTK_DEPENDENCIES vtk)
 set(KWWidgets_DEPENDENCIES vtk)
 set(Insight_DEPENDENCIES)
 set(BatchMake_DEPENDENCIES Insight)
 set(OpenIGTLink_DEPENDENCIES)
 set(teem_DEPENDENCIES vtk)
+set(cmcurl_DEPENDENCIES)
 set(slicer_DEPENDENCIES vtk Insight BatchMake OpenIGTLink teem cmcurl)
 
 #------------------------------------------------------------------------------
