COMP: temporarily disable building EMSegmentBatchMakeModule until Kilian can fix it's EMSegmentCommandLine_GUIVersion dependency.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13347 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BatchMakeApplications/CMakeLists.txt
+++ b/Applications/CLI/BatchMakeApplications/CMakeLists.txt
@@ -59,7 +59,7 @@ if(BatchMake_DIR)
 endif( BatchMake_DIR)
 
 SET(batchmake_modules
-  EMSegmentBatchMakeModule
+#  EMSegmentBatchMakeModule
   GaussianBlurBatchMakeModule
   RegisterImagesBatchMakeModule
   ResampleVolumeBatchMakeModule
