COMP: Update qMRMLWidgets/CMakeLists.txt to use CTK_LIBRARIES
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13355 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -161,8 +161,8 @@ ADD_LIBRARY(${lib_name}
 
 SET(qMRMLWidgets_LIBRARIES 
   ${QT_LIBRARIES}
+  ${CTK_LIBRARIES}
   MRML
-  CTKVisualizationVTKWidgets
   )
   
 TARGET_LINK_LIBRARIES(${lib_name} ${qMRMLWidgets_LIBRARIES})
