COMP: Superbuild - Make sure External_PythonQt is included
Todo: Python26 should also be build without dependencies with Tcl and Tk

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13364 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -193,7 +193,10 @@ set(tk_DEPENDENCIES tcl)
 set(incrTcl_DEPENDENCIES tcl tk)
 set(iwidgets_DEPENDENCIES tcl itcl)
 set(blt_DEPENDENCIES tcl tk)
-set(python_DEPENDENCIES tcl)
+set(python_DEPENDENCIES)
+if(Slicer3_USE_KWWIDGETS)
+  set(python_DEPENDENCIES tcl)
+endif()
 set(PythonQt_DEPENDENCIES python)
 set(blas_DEPENDENCIES)
 set(lapack_DEPENDENCIES)
@@ -220,9 +223,9 @@ if(Slicer3_USE_KWWIDGETS)
   include(External_blt)
 endif(Slicer3_USE_KWWIDGETS)
 
-if(Slicer3_USE_PYTHON)
+if(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
   include(External_Python26)
-endif(Slicer3_USE_PYTHON)
+endif(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
 
 if(CMAKE_Fortran_COMPILER AND Slicer3_BUILD_NUMPY)
   include(External_BLAS)
@@ -238,6 +241,11 @@ include(External_VTK)
 
 if(Slicer3_USE_QT)
   include(External_CTK)
+  
+  if(Slicer3_USE_PYTHONQT)
+    include(External_PythonQt)
+  endif(Slicer3_USE_PYTHONQT)
+  
 endif(Slicer3_USE_QT)
 
 if(Slicer3_USE_KWWIDGETS)
