BUG: TextNode is added. BUG: ROI, Bidimensional Line, and Spline are initialized.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13399 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/miAnnotation/CMakeLists.txt
+++ b/QTModules/miAnnotation/CMakeLists.txt
@@ -53,6 +53,8 @@ SET(qt_module_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationFiducialsStorageNode.h
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStickyNode.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStickyNode.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.h
   qSlicermiAnnotationModule.cxx
   qSlicermiAnnotationModule.h
   vtkSlicermiAnnotationModuleLogic.cxx
