COMP: PythonQt is not any more a direct dependency of Slicer
CTK will download/configure/build PythonQt

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13405 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -197,13 +197,15 @@ set(python_DEPENDENCIES)
 if(Slicer3_USE_KWWIDGETS)
   set(python_DEPENDENCIES tcl)
 endif()
-set(PythonQt_DEPENDENCIES python)
 set(blas_DEPENDENCIES)
 set(lapack_DEPENDENCIES)
 set(numpy_DEPENDENCIES blas lapack python)
 set(scipy_DEPENDENCIES numpy)
 set(vtk_DEPENDENCIES)
 set(CTK_DEPENDENCIES vtk)
+if(Slicer3_USE_PYTHONQT)
+  list(append CTK_DEPENDENCIES python)
+endif()
 set(KWWidgets_DEPENDENCIES vtk)
 set(Insight_DEPENDENCIES)
 set(BatchMake_DEPENDENCIES Insight)
@@ -241,11 +243,6 @@ include(External_VTK)
 
 if(Slicer3_USE_QT)
   include(External_CTK)
-  
-  if(Slicer3_USE_PYTHONQT)
-    include(External_PythonQt)
-  endif(Slicer3_USE_PYTHONQT)
-  
 endif(Slicer3_USE_QT)
 
 if(Slicer3_USE_KWWIDGETS)
@@ -291,10 +288,6 @@ endif(Slicer3_USE_QT)
 if(Slicer3_USE_PYTHON)
   list(APPEND slicer_DEPENDENCIES python)
 endif(Slicer3_USE_PYTHON)
-
-if (Slicer3_USE_PYTHONQT)
-  list(APPEND slicer_DEPENDENCIES PythonQt)
-endif(Slicer3_USE_PYTHONQT)
 
 set(slicer_KWWIDGETS_ARGS)
 if(Slicer3_USE_KWWIDGETS)
