ENH:  Simplified the user interface for BRAINSFit.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13408 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSFit/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSFit/TestSuite/CMakeLists.txt
@@ -495,7 +495,7 @@ endif()
     --outputVolumePixelType uchar
     --maskProcessingMode ROIAUTO
     --initializeTransformMode CenterOfHead
-    --transformType Rigid,ScaleVersor3D
+    --registrationClass ScaleVersor3D
     --fixedVolume ${BRAINSCommonLib_DATA_DIRS}/test.nii.gz
     --movingVolume ${BRAINSCommonLib_DATA_DIRS}/rotation.rescale.test.nii.gz
     --outputVolume ${BRAINSFit_BINARY_DIR}/Testing/${BRAINSFitTestName}.test.nii.gz
