ENH: switch VTK to use Steve's new git repo.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13410 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -204,7 +204,7 @@ set(iwidgets_DEPENDENCIES tcl itcl)
 set(blt_DEPENDENCIES tcl tk)
 set(python_DEPENDENCIES)
 if(Slicer3_USE_KWWIDGETS)
-  set(python_DEPENDENCIES tcl)
+  set(python_DEPENDENCIES tcl tk)
 endif()
 set(blas_DEPENDENCIES)
 set(lapack_DEPENDENCIES)
