ENH: add more warning supression. COMP: Fix mistakenly added dependency of Python on Tk when building on Windows.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13420 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -2,7 +2,11 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ${CTEST_CUSTOM_WARNING_EXCEPTION}
   "tcl.tcl."
   "cmcurl.."
-  "Insight."
+  "[Ii]nsight."
   "VTK."
+  "y.tab.c."
+  "getdate.y."
   "include.qtcore."
+  "OpenIGTLink."
+  "Microsoft SDKs."
   )
