BUG: fix case of cmake append directive (screamify)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13425 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -213,7 +213,7 @@ set(scipy_DEPENDENCIES numpy)
 set(vtk_DEPENDENCIES)
 set(CTK_DEPENDENCIES vtk)
 if(Slicer3_USE_PYTHONQT)
-  list(append CTK_DEPENDENCIES python)
+  list(APPEND CTK_DEPENDENCIES python)
 endif()
 set(KWWidgets_DEPENDENCIES vtk)
 set(Insight_DEPENDENCIES)
