COMP: more warning supression for SuperBuilds.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13437 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -1,12 +1,17 @@
 SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ${CTEST_CUSTOM_WARNING_EXCEPTION}
   "tcl.tcl."
-  "cmcurl.."
+  "tcl.tk."
+  "cmcurl."
   "[Ii]nsight."
   "VTK."
   "y.tab.c."
   "getdate.y."
+  "vtkparse.tab.c"
   "include.qtcore."
+  "[Kk]widgets."
+  "BatchMake."
   "OpenIGTLink."
   "Microsoft SDKs."
+  "VC.include."
   )
