ENH: Regorganization of the Diffusion and Tractography related modules and improvement of their documentation
git-svn-id: http://svn.slicer.org/Slicer3/branches/Slicer-3-6@13442 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -53,6 +53,7 @@ SET(modules
   QueryAtlas
   FetchMI
   SlicerWelcome
+  DiffusionWelcome
   RegistrationWelcome
   SegmentationWelcome
   ScriptedModule
