ENH: add more warnings.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13450 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -2,6 +2,8 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ${CTEST_CUSTOM_WARNING_EXCEPTION}
   "tcl.tcl."
   "tcl.tk."
+  "generic.itcl_."
+  "generic.itk_."
   "cmcurl."
   "[Ii]nsight."
   "VTK."
