ENH: more warning supression for blt.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13451 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -4,6 +4,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "tcl.tk."
   "generic.itcl_."
   "generic.itk_."
+  "blt."
   "cmcurl."
   "[Ii]nsight."
   "VTK."
