ENH: Meshing Module - adding image and model import capability
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13452 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Meshing/BuildingBlock/CMakeLists.txt
+++ b/Modules/Meshing/BuildingBlock/CMakeLists.txt
@@ -133,6 +133,8 @@ SET(LIB_SRCS
   vtkKWMimxLoadSurfaceGroup.cxx
   vtkKWMimxLoadMeshGroup.cxx
   vtkKWMimxDisplayMatPropGroup.cxx
+  vtkKWMimxImportModelSurfaceGroup.cxx
+  vtkKWMimxImportImageGroup.cxx
   )
 
 #SET_SOURCE_FILES_PROPERTIES(
