BUG: install the merge models, make a library for it. Try exposing the java directory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13461 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -564,14 +564,21 @@ set (CLP MergeModels)
 
 set ( ${CLP}_SOURCE ${CLP}.cxx )
 generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
+
 link_directories(${vtkITK_LIB_DIR})
+include_directories(${vtkITK_SOURCE_DIR} ${vtkITK_BINARY_DIR})
+
+add_library(${CLP}Lib SHARED ${${CLP}_SOURCE})
+slicer3_set_plugins_output_path(${CLP}Lib)
+set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
+target_link_libraries (${CLP}Lib vtkIO vtkGraphics)
+
 add_executable(${CLP} ${${CLP}_SOURCE})
 slicer3_set_plugins_output_path(${CLP})
-target_link_libraries (${CLP}
+target_link_libraries (${CLP} ${CLP}Lib
   vtkIO
   vtkGraphics
   )
-include_directories(${vtkITK_SOURCE_DIR} ${vtkITK_BINARY_DIR})
 
 #####################
 set (CLP GrayscaleFillHoleImageFilter)
@@ -694,7 +701,7 @@ SET(cli_modules
   DiffusionApplications
   #EndoNavTracking
   ExtractSkeleton
-  #Java
+  Java
   N4ITKBiasFieldCorrection
   RobustStatisticsSegmenter
   )
