--- a/Modules/ModelTransform/CMakeLists.txt
+++ b/Modules/ModelTransform/CMakeLists.txt
@@ -93,7 +93,7 @@ slicer3_install_modules(${lib_name})
 # Testing
 
 if(BUILD_TESTING)
-#  ADD_SUBDIRECTORY(Testing)
+  ADD_SUBDIRECTORY(Testing)
 endif(BUILD_TESTING)
 
 # --------------------------------------------------------------------------
