COMP: Superbuild - Slicer3_PYTHON is now ON by default
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13468 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -121,8 +121,8 @@ if(Slicer3_USE_QT)
   
 endif()
 
-# Python
-option(Slicer3_USE_PYTHON "Build Slicer with Python support" OFF)
+# Python - Enabled by default
+option(Slicer3_USE_PYTHON "Build Slicer with Python support" ON)
 
 if(Slicer3_USE_PYTHON)
 
