COMP: Superbuild - Set the number of reported warning to -1 (unlimited)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13469 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -1,3 +1,6 @@
+SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_ERRORS   -1)
+SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_WARNINGS -1)
+
 SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ${CTEST_CUSTOM_WARNING_EXCEPTION}
   "tcl.tcl."
